--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,13 @@
     height: 280px;
     width: 517px;
 }
+.skills {
+    margin: auto;
+    width: 50%;
+}
+
+@media only screen and (max-width: 800px) {
+    .info {
+        font-size: 12px;
+    }
+}
