--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,12 @@
     width: 517px;
 }
 .skills {
-    margin: auto;
-    width: 50%;
+    margin: auto !important;
+    width: 50% !important;
 }
 
 @media only screen and (max-width: 800px) {
     .info {
-        font-size: 12px;
+        font-size: 12px !important;
     }
 }
